--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "TOPU-Md",
+  "name": "ᨰׁׅꪱׁׅꪀׁׅ꯱ׁׅ֒℘ꫀׁׅܻꭈׁׅtׁׅꫀׁׅܻᝯׁhׁׅ֮",
   "description": "Simple WhatsApp Bot",
-  "logo": "https://telegra.ph/file/04e09c20e70de180ee319.jpg",
+  "logo": "https://telegra.ph/file/d7b133573a5a3622775e6.jpg",
   "keywords": ["Topu-md", "TOPU", "TOPU MD","TOPU MD wabot","Topu","Toputech"],
   "success_url": "/",
   "stack": "container",
@@ -116,7 +116,7 @@
     },
     "USER_IMAGE": {
       "description": "Put",
-      "value": "text",
+      "value": "",
       "required": false
     },
     "MENU": {
