--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
    "main": "index.js",
    "type": "commonjs",
    "scripts": {
-      "run": "pm2 start . --deep-monitoring --attach --name Toputechai || node .",
-      "Toputech ": "pm2 start . --deep-monitoring --attach --name Toputechai || node .",
-      "start": "pm2 start . --attach --name Toputechai",
-      "stop": "pm2 stop Toputechai",
-      "heroku-postbuild": "git clone https://github.com/WillisKE/topu-ai.git temp && mv temp/.git .git && rm -rf temp && npx puppeteer@latest install  --y",
+      "run": "pm2 start . --deep-monitoring --attach --name WinsperTech || node .",
+      "Toputech ": "pm2 start . --deep-monitoring --attach --name WinsperTech || node .",
+      "start": "pm2 start . --attach --name WinsperTech",
+      "stop": "pm2 stop WinsperTech",
+      "heroku-postbuild": "git clone https://github.com/Toputech/Topu-ai.git temp && mv temp/.git .git && rm -rf temp && npx puppeteer@latest install  --y",
       "fis-heroku-postbuild": "git clone https://github.com/WillisKE/topu-ai.git temp1 && rsync -av temp1/* ./ && rsync -av temp1/.* ./ && rm -rf temp1 && npm i && npx puppeteer@latest install",
       "postinstall": "npx puppeteer@latest install --y"
    },
