--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-   "name": "Topu-md",
+   "name": "WinsperTech",
    "version": "2.5.0",
    "description": "Multi device whatsapp bot by Toputech ....",
    "main": "index.js",
@@ -9,7 +9,7 @@
       "Toputech ": "pm2 start . --deep-monitoring --attach --name WinsperTech || node .",
       "start": "pm2 start . --attach --name WinsperTech",
       "stop": "pm2 stop WinsperTech",
-      "heroku-postbuild": "git clone https://github.com/Toputech/Topu-ai.git temp && mv temp/.git .git && rm -rf temp && npx puppeteer@latest install  --y",
+      "heroku-postbuild": "git clone https://github.com/WillisKE/Topu-ai.git temp && mv temp/.git .git && rm -rf temp && npx puppeteer@latest install  --y",
       "fis-heroku-postbuild": "git clone https://github.com/WillisKE/topu-ai.git temp1 && rsync -av temp1/* ./ && rsync -av temp1/.* ./ && rm -rf temp1 && npm i && npx puppeteer@latest install",
       "postinstall": "npx puppeteer@latest install --y"
    },
