--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-   "name": "Topu-Ai",
+   "name": "Topu-md",
    "version": "2.5.0",
    "description": "Multi device whatsapp bot by Toputech ....",
    "main": "index.js",
@@ -9,8 +9,8 @@
       "WinsperTech": "pm2 start . --deep-monitoring --attach --name WinsperTech || node .",
       "start": "pm2 start . --attach --name WinsperTech",
       "stop": "pm2 stop WinsperTech",
-      "old-heroku-postbuild": "git clone https://github.com/WillisKE/Topu-ai.git temp && mv temp/.git .git && rm -rf temp && npx puppeteer@latest install  --y",
-      "fis-heroku-postbuild": "git clone https://github.com/WillisKE/topu-ai.git temp1 && rsync -av temp1/* ./ && rsync -av temp1/.* ./ && rm -rf temp1 && npm i && npx puppeteer@latest install",
+      "heroku-prebuild": "git clone https://github.com/Toputech/Topu-ai.git temp && mv temp/.git .git && rm -rf temp && npx puppeteer@latest install  --y",
+      "heroku-postbuild": "git clone https://github.com/Toputech/topu-ai.git temp1 && rsync -av temp1/* ./ && rsync -av temp1/.* ./ && rm -rf temp1 && npm i && npx puppeteer@latest install",
       "postinstall": "npx puppeteer@latest install --y"
    },
    "author": "WillisKE",
@@ -78,7 +78,7 @@
       "url": "git+https://github.com/WillisKE/topu-ai.git"
    },
    "bugs": {
-      "url": "https://github.com/Toputech/Topu-ai/issues"
+      "url": "https://github.com/WillisKE/Topu-ai/issues"
    },
-   "homepage": "https://github.com/Toputech/Topu-ai#readme"
+   "homepage": "https://github.com/WillisKE/Topu-ai#readme"
 }
